<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03045e"
    android:backgroundTint="#03045e"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:orientation="vertical"
        android:weightSum="1.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/label_memory"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold|italic"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/react"
            android:contentDescription="@string/desc_image" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/label_score"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/txtNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:text="@string/label_number"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="italic"
            android:gravity="center"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/userNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/txt_hint"
            android:textColorHint="#FAB6B6"
            android:textAlignment="center"
            android:textSize="30sp"
            android:autofillHints=""
            android:textColor="@android:color/white"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#BDAF34"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="italic"
            android:text="@string/btn_label"
            tools:ignore="NestedWeights" />
    </LinearLayout>

</LinearLayout>